# KeneNet

./: README.md  setup.cfg
src/kenenet/: __init__.py
src/kenenet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
