[metadata]
name = kenenet
version = 1.0.2
author = kiddykene
author_email = kittykingbusiness@gmail.com
description = dude what the fuck even is this package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.youtube.com/@KiddyKene
project_urls =
    Bug Tracker = https://github.com/kiddykene/KeneNet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
install_requires =
    zhmiscellany
    mss
    pillow
    pydub
    pyperclip
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src